--- a/vite-project/src/components/assets/css/Works.css
+++ b/vite-project/src/components/assets/css/Works.css
@@ -1,10 +1,11 @@
 .works_container{
-    height: 100vh;
+  padding: 10px;
+    height: auto;
     background-color: black;
   overflow: hidden;
     display: flex;
     background: rgb(0,0,0);
-background: linear-gradient(156deg, rgba(0,0,0,1) 71%, rgba(186,135,24,1) 92%, rgba(253,187,45,1) 100%);
+
 }
 .how{
     margin: 30px;
@@ -14,7 +15,7 @@ background: linear-gradient(156deg, rgba(0,0,0,1) 71%, rgba(186,135,24,1) 92%, r
     width: 50%;
 }
 .stream{
-    width: 50%;
+    width: 45%;
     overflow: hidden;
     background-image: url("");
     display: flex;
@@ -22,7 +23,20 @@ background: linear-gradient(156deg, rgba(0,0,0,1) 71%, rgba(186,135,24,1) 92%, r
 }
 .how_img{
     height: 50%;
+    display: flex;
+    justify-content: center ;
 
+
+}
+.how_img img{
+    border-radius: 1rem;
+    box-shadow: rgba(255, 136, 0, 0.35) 0px 5px 15px;
+}
+.how p{
+  padding: 10px;
+  font-size: 2.5vh;
+  margin-top: 4rem;
+  
 }
 .how_img img
     {
@@ -30,64 +44,24 @@ background: linear-gradient(156deg, rgba(0,0,0,1) 71%, rgba(186,135,24,1) 92%, r
        
        
     }
-#rssBlock{
-
-    height: 100px;
-    background:black;
-    color: orange;
- 
-    white-space:nowrap;
-   width: 300%;
-    overflow: hidden;
-    display: flex;
+@media (max-width:900px) {
+  .how{
+    width: 100%;
   }
   
-  /*remove p*/
-  .cnnContents {
-   
-    padding-top: 20px;
-    margin:0 auto;
-    font-size: 4rem;
-    white-space: nowrap;
-    text-transform: uppercase;
- 
-    font-weight: 300;
-    animation: animate_text 20s linear infinite;
+  .stream{
+    width: 100%;
+    justify-content: center;
   }
-  
-
-  
-  @keyframes animate_text {
-    from {
-      transform: translate3d(0, 0, 0);
+  .how_img img
+    {
+        width: 100%;
+       
+       
     }
-    to {
-      transform: translate3d(-100%, 0, 0);
+    .works_container{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 }
-  /* scrolling-left is continuous/repeatly text */
-  @keyframes scrolling-left1 {
-      0% {transform: translateX(100%);
-          -webkit-transform: translateX(100%);}
-        100% {transform: translateX(-100%);
-            -webkit-transform: translateX(-100%);}
-  }
-  @keyframes scrolling-left2 {
-      0% {transform: translateX(0%);
-          -webkit-transform: translateX(0%);}
-        100% {transform: translateX(-100%);
-            -webkit-transform: translateX(-100%);}
-  }
-  
-  @-webkit-keyframes scrolling-left1 {
-      0% {-webkit-transform: translateX(100%);}
-        100% {-webkit-transform: translateX(-100%);}
-  }
-  @-webkit-keyframes scrolling-left2 {
-      0% {-webkit-transform: translateX(-00%);}
-        100% {-webkit-transform: translateX(-200%);}
-  }
-  
-  
-  
-  
